--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,8 @@
     <string name="app_name">RunHDU</string>
     <string name="title_activity_login">RunHDU</string>
     <string name="current_version">1.0.0</string>
-    <string name="app_description">RunHDU Ver 1.0.0 Beta</string>
+    <string name="app_description">RunHDU Ver 1.0.0</string>
     <string name="title_activity_main">运动概览</string>
-    <string name="demo_tip">提示：所有数据均为演示用途。</string>
-    <string name="tabText1_activity_main">今日跑步统计</string>
-    <string name="tabText2_activity_main">历史跑步数据</string>
-    <string name="login_tips_sunny_run">Tip: 密码为阳光长跑官网密码，初始密码与学号相同。绑定的学号可以随时更换。</string>
     <string name="never_run">你今天还没有跑过步哦！\n点击右下角的跑步按钮，开始跑步吧。</string>
     <string name="got_it">知道了</string>
     <string name="internet_not_connect">跑步需要同步数据，请连接网络后，再开始跑步。或者在设置中关闭云同步。</string>
@@ -18,20 +14,6 @@
     <string name="over_time">跑步用时过长，已经自动结束跑步。</string>
     <string name="title_activity_settings">设置</string>
     <string name="sunny_run_tips">Tips: 绑定的学号可以随时更换。你可以随时在右上方菜单的关于界面中检查更新。</string>
-    <string-array name="update_rate">
-        <item>一小时</item>
-        <item>三小时</item>
-        <item>六小时</item>
-        <item>半天</item>
-        <item>一天</item>
-    </string-array>
-    <string-array name="update_rate_value">
-        <item>1</item>
-        <item>3</item>
-        <item>6</item>
-        <item>12</item>
-        <item>24</item>
-    </string-array>
 
     <string-array name="chart_num">
         <item>7天</item>
@@ -87,5 +69,21 @@
         <item>2.0</item>
         <item>2.5</item>
         <item>3.0</item>
+    </string-array>
+
+    <string-array name="help_title">
+        <item>跑步前一直提示“等待定位”或者“等待GPS”？</item>
+        <item>跑步前一直提示“没有权限”？</item>
+        <item>为什么跑步需要连接网络？</item>
+        <item>步数一直为0？</item>
+        <item>手机锁屏后，定位点不动？</item>
+    </string-array>
+
+    <string-array name="help_answer">
+        <item>没有搜索到GPS，请您在室外空旷地带尝试进行定位以及跑步；或者打开设置中的“允许无GPS跑步”。</item>
+        <item>请确认您已经授予了本APP的定位权限。</item>
+        <item>地图数据的下载、WIFI辅助定位以及云同步都需要网络连接才能工作。</item>
+        <item>可能是您的手机没有加速度传感器。</item>
+        <item>请查看手机的省电设置，例如MIUI的“神隐模式”或OPPO的“纯净后台”功能，请把此APP加入省电白名单。</item>
     </string-array>
 </resources>
