--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">RunHDU</string>
     <string name="title_activity_login">RunHDU</string>
-    <string name="current_version">1.0.3</string>
-    <string name="app_description">RunHDU Ver 1.0.3</string>
+    <string name="current_version">1.2.0</string>
+    <string name="app_description">RunHDU Ver 1.2.0</string>
     <string name="title_activity_main">运动概览</string>
     <string name="never_run">你今天还没有跑过步哦！\n点击右下角的跑步按钮，开始跑步吧。</string>
     <string name="got_it">知道了</string>
-    <string name="internet_not_connect">跑步需要同步数据，请连接网络后，再开始跑步。或者在设置中关闭云同步。</string>
+    <string name="internet_not_connect">跑步需要联网，请连接网络后，再开始跑步。</string>
     <string name="dis_not_enough">跑步路程太短，本次跑步无效。</string>
     <string name="no_gps">GPS信号较弱或无信号。请走到开阔地带再开始跑步。</string>
     <string name="exit_ensure">如果退出，数据将会丢失。你确定退出吗？</string>
@@ -15,7 +15,7 @@
     <string name="title_activity_settings">设置</string>
     <string name="sunny_run_tips">Tips: 绑定的学号可以随时更换。你可以随时在右上方菜单的关于界面中检查更新。</string>
     <string name="no_friends">没有好友！赶快去添加好友吧。</string>
-    <string name="no_friend_apply">还没有好友申请哦，快去寻找朋友吧！</string>
+    <string name="no_friend_apply">还没有好友请求哦，快去寻找朋友吧！</string>
 
     <string-array name="chart_num">
         <item>7天</item>
@@ -74,6 +74,7 @@
     </string-array>
 
     <string-array name="help_title">
+        <item>更新日志</item>
         <item>跑步前一直提示“等待定位”或者“等待GPS”？</item>
         <item>跑步前一直提示“没有权限”？</item>
         <item>为什么跑步需要连接网络？</item>
@@ -82,16 +83,43 @@
         <item>手机锁屏后，定位点不动？</item>
         <item>跑步同步开关打开后，都会同步哪些数据？</item>
         <item>我的隐私会被泄露吗？</item>
+        <item>好友功能如何使用？我的数据好友可以看到吗？</item>
     </string-array>
 
     <string-array name="help_answer">
-        <item>没有搜索到GPS，请您在室外空旷地带尝试进行定位以及跑步；或者打开设置中的“允许无GPS跑步”。</item>
+        <item>更新日志：
+            \n\nVer 1.2.0 2017-05-27
+            \n1.修复设置项无法生效的Bug；
+            \n2.修复4.4机型点击删除好友无效的Bug；
+            \n3.优化更新链接；
+            \n4.优化头像加载策略。
+            \n\nVer 1.1.2 2017-05-26
+            \n1.新增好友；
+            \n2.更新提示改为退出时提示；
+            \n3.修复第一次打开时头像无法加载的Bug；
+            \n4.去除同步服务器信息的加载框；
+            \n5.其他细节优化。
+            \n\nVer 1.0.3 2017-05-23
+            \n1.修复忽略此版本更新后无法自动检测到任何更新的Bug；
+            \n2.修复跑步结束后主界面不能刷新的Bug；
+            \n3.修复若干处导致崩溃的问题。
+            \n\nVer 1.0.0
+            \n1.第一版本</item>
+        <item>为了能准确记录您的速度、路程、轨迹等信息，没有搜索到GPS时，不允许开始跑步。\n请您在室外空旷地带尝试进行定位以及跑步；或者打开设置中的“不检查GPS”。</item>
         <item>请确认您已经授予了本APP的定位权限。</item>
         <item>地图数据的下载、WIFI辅助定位以及云同步都需要网络连接才能工作。</item>
         <item>可能是您的手机没有加速度传感器。</item>
-        <item>跑步时需要显示与处理大量数据，请确认您的手机运行内存充足。内存不足时会APP被系统杀死，从而丢失跑步数据。我们会持续优化内存占用。</item>
+        <item>跑步时需要显示与处理大量数据，请确认您的手机运行内存充足。\n内存不足时会APP被系统杀死，从而丢失跑步数据。\n我们会持续优化内存占用。</item>
         <item>请查看手机的省电设置，例如MIUI的“神隐模式”或OPPO的“纯净后台”功能，请把此APP加入省电白名单。</item>
-        <item>进入APP后，我们会将您的数据和服务器进行比对；每次跑步后，您的跑步数据将会上传到服务器；删除跑步数据时，将会同步服务器进行删除。</item>
-        <item>您的密码以及部分跑步数据会被转码以及加密；您的反馈信息不会记录用户名；我们不会获取您的手机信息、联系人、短信等敏感信息。</item>
+        <item>进入APP后，我们会将您的数据和服务器进行比对；\n每次跑步后，您的跑步数据将会上传到服务器；\n删除跑步数据时，将会同步服务器进行删除。</item>
+        <item>您的密码以及部分跑步数据会被转码以及加密；\n您的反馈信息不会记录用户名；\n我们不会获取您的手机信息、联系人、短信等敏感信息。</item>
+        <item>
+            进入好友界面后，您可以添加好友、查看好友的跑步信息、处理好友申请或者删除好友。
+            \n点击刷新按钮查看最新的好友信息。
+            \n跑步详情页面的背景图与主菜单一致。
+            \n删除好友后，对方的好友列表里也不再出现您的信息。
+            \n您可以看到好友的所有数据，同时您的数据也可以被好友看到。
+        \n为了节省网络资源，好友头像每小时刷新一次。
+        </item>
     </string-array>
 </resources>
