--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">RunHDU</string>
     <string name="title_activity_login">RunHDU</string>
-    <string name="current_version">1.2.0</string>
-    <string name="app_description">RunHDU Ver 1.2.0</string>
+    <string name="current_version">1.2.2</string>
+    <string name="app_description">RunHDU Ver 1.2.2</string>
     <string name="title_activity_main">运动概览</string>
     <string name="never_run">你今天还没有跑过步哦！\n点击右下角的跑步按钮，开始跑步吧。</string>
     <string name="got_it">知道了</string>
@@ -73,6 +73,7 @@
         <item>3.0</item>
     </string-array>
 
+    <string name="developer">开发人员\n\n飞翔的傻瓜\nSailFlorve\n晴天流水\n乔莹\nhang 行不止</string>
     <string-array name="help_title">
         <item>更新日志</item>
         <item>跑步前一直提示“等待定位”或者“等待GPS”？</item>
@@ -88,6 +89,11 @@
 
     <string-array name="help_answer">
         <item>更新日志：
+            \n\nVer 1.2.2 2017-06-29
+            \n1.新增跑步界面及跑步详情界面分享；
+            \n2.增强稳定性；
+            \n3.扩大反馈文本框;
+            \n4.增加开发人员。
             \n\nVer 1.2.0 2017-05-27
             \n1.修复设置项无法生效的Bug；
             \n2.修复4.4机型点击删除好友无效的Bug；
